# paybridge-notification-svc

./: Cargo.toml  Dockerfile  Dockerfile.dev  docker-compose.yml
src/: main.rs  startup.rs
src/domain/notification/: dto.rs  mod.rs  routes.rs  service.rs  templates.rs
src/infrastructure/: config.rs  db.rs  mod.rs  response.rs
src/infrastructure/mail/: mailhog.rs
