[package]
name = "paybridge_notification_service"
version = "0.1.0"
edition = "2021"
[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }

dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

lettre = { version = "0.11", features = ["smtp-transport", "builder"] }